# small-talk

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
small_talk/: Cargo.toml
small_talk/src/: config.rs  lib.rs  main.rs  telemetry.rs
small_talk/src/api/: error.rs  extractor.rs  mod.rs
small_talk/src/api/session/: mod.rs  routes.rs
small_talk/src/api/session/tts/: mod.rs  routes.rs
small_talk/src/setup/: mod.rs
small_talk/src/system/: config.rs  data.rs  error.rs  mod.rs  playback.rs  postprocessing.rs  session.rs  timeout.rs  utils.rs  voice_manager.rs
small_talk/src/system/rvc_backends/: mod.rs
small_talk/src/system/rvc_backends/seedvc/: api.rs  local.rs  mod.rs
small_talk/src/system/tts_backends/: mod.rs
small_talk/src/system/tts_backends/alltalk/: api.rs  local.rs  mod.rs
small_talk_experiments/: Cargo.toml
small_talk_experiments/src/: main.rs  pytests.rs  whisper.rs
small_talk_ml/: Cargo.toml
small_talk_ml/src/: embeddings.rs  lib.rs  main.rs  stt.rs  training.rs
small_talk_ml/src/emotion_classifier/: data.rs  mod.rs  model.rs
small_talk_ml/src/emotion_classifier/training/: mapper.rs  mod.rs
small_talk_organiser/: Cargo.toml
small_talk_organiser/src/: main.rs
small_talk_organiser/src/args/: alltalk.rs  mod.rs  organise.rs
small_talk_whisper/: Cargo.toml
small_talk_whisper/src/: lib.rs
st_db/: Cargo.toml  README.md  build.rs
st_db/migrations/: 20250501190501_basic_schema.sql
st_db/src/: lib.rs  pool.rs
st_db/src/entity/: characters.rs  dialogue.rs  mod.rs  voice_lines.rs
st_experiments/: Cargo.toml
st_experiments/src/: audio.rs  f5_rs.rs  main.rs  rvc.rs  whisper.rs
st_http/: Cargo.toml
st_http/src/: config.rs  main.rs  telemetry.rs
st_http/src/api/: error.rs  extractor.rs  mod.rs
st_http/src/api/session/: routes.rs
st_http/src/api/session/tts/: mod.rs  routes.rs
st_http/src/setup/: first_time.rs  mod.rs
st_ml/: Cargo.toml
st_ml/src/: lib.rs  main.rs
st_ml/src/emotion_classifier/: mod.rs
st_organiser/: Cargo.toml
st_organiser/src/: main.rs  trace.rs
st_organiser/src/args/: compress.rs  migrate.rs  mod.rs  organise.rs  reassign.rs  regenerate.rs
st_system/: Cargo.toml
st_system/src/: config.rs  data.rs  emotion.rs  error.rs  lib.rs  playback.rs  postprocessing.rs  session.rs  timeout.rs  utils.rs  voice_manager.rs
st_system/src/audio/: audio_data.rs  mod.rs  playback.rs  postprocessing.rs  scale_tempo.rs
st_system/src/rvc_backends/: mod.rs
st_system/src/rvc_backends/seedvc/: api.rs  local.rs  mod.rs
st_system/src/session/: db.rs  linecache.rs  mod.rs  order_channel.rs  queue_actor.rs
st_system/src/tts_backends/: mod.rs
st_system/src/tts_backends/alltalk/: api.rs  local.rs  mod.rs
st_system/src/tts_backends/indextts/: api.rs  local.rs  mod.rs
