[workspace]
resolver = "2"
default-members = ["small_talk"]
members = [ "st_system","small_talk", "small_talk_experiments", "small_talk_ml", "small_talk_organiser"]

[workspace.dependencies]
tracing = "0.1.40"
eyre = "0.6"
thiserror = "2.0.0"
error_set = "0.7.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

itertools = "0.13.0"
chrono = "0.4"

# Audio Processing
wavers = "1.5.1"

# Build dependencies with full release optimizations in debug builds since they'll rarely change
[profile.dev.package."*"]
opt-level = 3

[profile.release]
incremental = true
debug = 0


