[workspace]
resolver = "2"
default-members = ["st_http"]
members = [ "st_*"]

[workspace.package]
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Hirtol/small-talk"

[workspace.dependencies]
tracing = "0.1.40"
eyre = "0.6"
thiserror = "2.0.0"
error_set = "0.8.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

itertools = "0.14.0"
chrono = "0.4"

# Audio Processing
wavers = "1.5.1"

# Build dependencies with full release optimizations in debug builds since they'll rarely change
[profile.dev.package."*"]
opt-level = 3

[profile.release]
incremental = true
debug = 0


