[package]
name = "small_talk"
version = "0.1.0"
edition = "2021"
description = "TTS api for game voicing"
repository = "https://github.com/Hirtol/small-talk"
license = "MIT"

[lib]
doctest = false
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "small_talk"

[features]
debug = ["console-subscriber", "tokio/tracing"]

[dependencies]
color-eyre = "0.6"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
console-subscriber = { version = "0.4.1", optional = true }

eyre.workspace = true
thiserror.workspace = true
error_set.workspace = true
itertools = { workspace = true }

tokio = { version = "1", features = ["full"] }
futures = { version = "0.3" }

axum = { version = "0.7.9", features = ["ws", "tower-log", "multipart", "macros"] }
axum-extra = { version = "0.9.6", features = [] }
tower = { version = "0.5.1", features = ["timeout", "limit", "load-shed"] }
tower-http = { version = "0.6.1", features = ["full"] }
reqwest = { version = "0.12.9", features = ["json", "multipart"] }
url = { version = "2.5.4", features = ["serde"] }

axum-jsonschema = { version = "0.8.0", features = ["aide"] }
aide = { version = "0.13.4", features = ["axum", "macros", "scalar"] }
schemars = { version = "0.8.10", features = [] }

chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }

# Conf
config = { version = "0.15.6", features = ["toml"] }
dotenv = "0.15"
platform-dirs = "0.3"
toml = "0.8"

# ML
st_system = {path = "../st_system"}

[dev-dependencies]
tracing-test = "0.2.5"