[package]
name = "st_db"
version = "0.1.0"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
sea-orm = { workspace = true, features = ["sea-orm-internal", "sqlx-sqlite", "with-uuid", "sqlite-use-returning-for-3_35"] }
sqlx = { workspace = true }
eyre.workspace = true
futures = { workspace = true }
tracing.workspace = true

[build-dependencies]
tokio = { workspace = true, features = ["full"] }
sea-orm-cli = { version = "1", default-features = false, features = ["runtime-tokio-rustls", "codegen", "cli"] }
sea-schema = { version = "0.16", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "discovery", "writer", "probe"] }
sea-query = { workspace = true }
sea-query-binder = { version = "0.7.0", features = ["with-uuid", "with-chrono", "with-time", "with-json", "with-rust_decimal"] }
sea-orm-codegen = "1"
sqlx = { workspace = true }
chrono = { workspace = true }
eyre.workspace = true