[package]
name = "st_experiments"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing.workspace = true
eyre.workspace = true
thiserror.workspace = true
error_set.workspace = true
self_cell = "1.0.4"
itertools.workspace = true
strsim = "0.11.1"


# ML, llama for efficient CPU embeddings
llama-cpp-2 = { git = "https://github.com/utilityai/llama-cpp-rs", rev = "a103be60d05885fcae99665a397e72ba3533c925", features = ["cuda"] }
llama-cpp-sys-2 = { git = "https://github.com/utilityai/llama-cpp-rs", rev = "a103be60d05885fcae99665a397e72ba3533c925", features = ["cuda"] }
burn = { version = "0.15.0", features = ["autodiff", "wgpu", "train", "ndarray"] }
burn-import = "0.15.0"
ort = { version = "2.0.0-rc.9", features = ["copy-dylibs", "load-dynamic", "cuda", "directml"] }
st_ml = {path = "../st_ml"}
pyo3 = { version = "0.23.4", features = ["auto-initialize"] }
# whisper-rs = {path = "../../whisper-rs", features = ["whisper-cpp-tracing"]}
whisper-rs = { git = "https://github.com/Hirtol/whisper-rs", features = ["whisper-cpp-tracing"]}

reqwest = { version = "0.12.12", features = ["json", "multipart", "blocking"] }
bytemuck = "1.21.0"

# Audio stuff
mel_spec = "0.2.7"
rubato = "0.16.1"
samplerate = "0.2.4"
hound = "3.5.1"
wavers.workspace = true
ebur128 = "0.1.10"
fon = { git = "https://github.com/ardaku/fon" }
fundsp = "0.20.0"

serde.workspace = true
serde_json.workspace = true