[package]
name = "st_http"
version = "0.1.0"
description = "TTS api for game voicing"
edition.workspace = true

[lib]
doctest = false
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "st_http"

[features]
debug = ["console-subscriber", "tokio/tracing"]

[dependencies]
color-eyre = "0.6"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
console-subscriber = { version = "0.4.1", optional = true }

eyre.workspace = true
error_set.workspace = true
itertools = { workspace = true }

tokio = { workspace = true, features = ["full"] }
futures.workspace = true

axum = { version = "0.8.1", features = ["ws", "tower-log", "multipart", "macros"] }
axum-extra = { version = "0.10.0", features = [] }
tower = { version = "0.5.1", features = ["timeout", "limit", "load-shed"] }
tower-http = { version = "0.6.1", features = ["full"] }
url = { version = "2.5.4", features = ["serde"] }

aide = { version = "0.14.1", features = ["axum", "macros", "scalar", "axum-json", "axum-query"] }
schemars = { version = "0.8.10", features = [] }

chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }

# Conf
config = { version = "0.15.6", features = ["toml"] }
dotenv = "0.15"
platform-dirs = "0.3"
toml = "0.8"

# ML
st_system = {path = "../st_system"}

[dev-dependencies]
tracing-test = "0.2.5"