[package]
name = "st_organiser"
version = "0.1.0"
edition.workspace = true

[dependencies]
color-eyre = "0.6"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17.8"
tracing-indicatif = "0.3.6"

eyre.workspace = true
itertools = { workspace = true }
clap = { version = "4", features = ["derive"] }

tokio = { version = "1", features = ["full"] }
futures = { version = "0.3" }

# Path Walking
walkdir = "2.4"
path_abs = { version = "0.5", default-features = false }

# ML
st_ml = { path = "../st_ml", features = ["cuda"] }
st_system = {path = "../st_system"}
st_http = { path = "../st_http" }
wavers.workspace = true
rayon = "1.10.0"