[package]
name = "st_system"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

eyre.workspace = true
thiserror.workspace = true
error_set.workspace = true
itertools = { workspace = true }
papaya = { version = "0.1.4", features = ["serde"] }
rand = "0.8.5"
strsim = "0.11.1"
bytemuck = "1.21.0"

tokio = { version = "1", features = [] }
futures = { version = "0.3" }

reqwest = { version = "0.12.9", features = ["json", "multipart"] }
url = { version = "2.5.4", features = ["serde"] }

schemars = { version = "0.8.10", features = [] }

chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }

# Path Walking
walkdir = "2.4"
path_abs = { version = "0.5", default-features = false }
dunce = "1.0"
tempfile = "3.14.0"
pathdiff = "0.2.3"

# Conf
platform-dirs = "0.3"
toml = "0.8"

# rodio for playback!
rodio = "0.20.1"
wavers.workspace = true
ebur128 = "0.1.10"

# ML
st_ml = {path = "../st_ml", features = ["cuda"]}
process-wrap = { version = "8.2", features = ["tokio1"] }
