[package]
name = "st_system"
version = "0.1.0"
edition.workspace = true

[dependencies]
tracing.workspace = true

eyre.workspace = true
thiserror.workspace = true
error_set.workspace = true
itertools = { workspace = true }
papaya = { version = "0.2.1", features = ["serde"] }
rand = "0.9.0"
strsim = "0.11.1"
bytemuck = "1.21.0"

tokio = { version = "1", features = [] }
futures = { version = "0.3" }

reqwest = { version = "0.12.9", features = ["json", "multipart"] }
url = { version = "2.5.4", features = ["serde"] }

schemars = { version = "0.8.10", features = [] }

chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }

# Persistence
st_db = { path = "../st_db"}
sea-orm.workspace = true
# diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
# libsqlite3-sys = { version = "0.31.0", features = ["bundled"] }

# Path Walking
walkdir = "2.4"
path_abs = { version = "0.5", default-features = false }
dunce = "1.0"
tempfile = "3.14.0"
pathdiff = "0.2.3"

# Conf
platform-dirs = "0.3"
toml = "0.8"

# rodio for playback!
kira = { version = "0.10.2", features = ["ogg"] }
wavers.workspace = true
ebur128 = "0.1.10"
vorbis_rs = "0.5.5"

# ML
st_ml = {path = "../st_ml", features = ["cuda"]}
process-wrap = { version = "8.2", features = ["tokio1"] }
sqlx = "0.8.5"
